--- a/static/salad-style.css
+++ b/static/salad-style.css
@@ -1,3 +1,5 @@
+
+/*
 body            { font-family: sans-serif; background: #eee; }
 a, h1, h2       { color: #377ba8; }
 h1, h2          { font-family: 'Georgia', serif; margin: 0; }
@@ -16,3 +18,10 @@ h2              { font-size: 1.2em; }
 .flash          { background: #cee5F5; padding: 0.5em;
                   border: 1px solid #aacbe2; }
 .error          { background: #f0d6d6; padding: 0.5em; }
+
+*/
+
+
+.navbar-brand > img {
+    display: inline;
+}
